--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -12,19 +12,19 @@ jobs:
     - name: Build and Publish the Docker image to GitHub Packages
       uses: elgohr/Publish-Docker-Github-Action@3.04
       with:
-        name: gythialy/golang-cross/golang-cross-builder
-        username: gythialy
+        name: mengdaming/golang-cross/golang-cross-builder
+        username: mengdaming
         password: ${{ secrets.DEPLOY_TOKEN }}
         dockerfile: Dockerfile.builder
         registry: docker.pkg.github.com
-        tags: "latest,v1.16.2"
+        tags: "latest,v1.16.7-fyne.1"
     
     - name: Build and Publish the Docker image to ghcr.io
       uses: elgohr/Publish-Docker-Github-Action@3.04
       with:
-        name: gythialy/golang-cross-builder
-        username: gythialy
+        name: mengdaming/golang-cross-builder
+        username: mengdaming
         password: ${{ secrets.DEPLOY_TOKEN }}
         dockerfile: Dockerfile.builder
         registry: ghcr.io
-        tags: "latest,v1.16.2"
+        tags: "latest,v1.16.7-fyne.1"
