--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Build and Publish the Docker image to ghcr.io
       uses: elgohr/Publish-Docker-Github-Action@3.04
       with:
-        name: gythialy/golang-cross
-        username: gythialy
+        name: mengdaming/golang-cross
+        username: mengdaming
         password: ${{ secrets.DEPLOY_TOKEN }}
         registry: ghcr.io
         tag_names: true
