--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         name: gythialy/golang-cross/xcgo
         username: gythialy
-        password: ${{ secrets.DEPLOY_TOKEN }}
+        password: ${{ secrets.GITHUB_TOKEN }}
         registry: docker.pkg.github.com
         tag_names: true
     
@@ -24,7 +24,7 @@ jobs:
       with:
         name: mengdaming/golang-cross
         username: mengdaming
-        password: ${{ secrets.DEPLOY_TOKEN }}
+        password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
         tag_names: true
 
